--- a/MyWeb1.css
+++ b/MyWeb1.css
@@ -13,6 +13,7 @@ body {
   background-color: #333;
   color: white;
 }
+
 .container{
   max-width: 700px;
   margin: 0 auto;
@@ -34,6 +35,7 @@ header{
   width: 100%;
   align-items: center;
   padding: 1.2rem 0;
+  background-color: #212529
 }
 
 header>p {
@@ -161,4 +163,3 @@ footer>p>a {
   text-decoration: none;
   color: white;
 }
-
